Salesforce Billing Service System/force-app/main/default/objects/Invoice__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Key for syncing with external ERPs</description>
    <externalId>true</externalId>
    <inlineHelpText>Key for syncing with external ERPs</inlineHelpText>
    <label>External ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>