Salesforce Billing Service System/force-app/main/default/objects/Invoice__c/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <description>Applicable tax based on region</description>
    <inlineHelpText>Applicable tax based on region</inlineHelpText>
    <label>Tax Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>